syntax = "proto3";

import "google/protobuf/descriptor.proto";
import "nanopb.proto";

option go_package = "protomcp.org/nanorpc/pkg/nanorpc";
option (nanopb_fileopt).long_names = false;

message NanoRPCRequest {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_PING = 1;
    TYPE_REQUEST = 2;
    TYPE_SUBSCRIBE = 3;
  }

  int32 request_id = 1;
  Type request_type = 2;

  oneof path_oneof {
    uint32 path_hash = 3; // FNV-1a of path
    string path = 4 [(nanopb).max_size = 50];
  }

  bytes data = 10 [(nanopb).type = FT_CALLBACK];
}

message NanoRPCResponse {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_PONG = 1;
    TYPE_RESPONSE = 2;
    TYPE_UPDATE = 3;
  }

  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_OK = 1;
    STATUS_NOT_FOUND = 2;
    STATUS_NOT_AUTHORIZED = 3;
    STATUS_INTERNAL_ERROR = 4;
  }

  int32 request_id = 1;
  Type response_type = 2;
  Status response_status = 3;
  string response_message = 4;

  bytes data = 10 [(nanopb).type = FT_CALLBACK];
}

// NanoRPC specific options for methods
message NanoRPCMethodOptions {
  // Request path for RPC routing
  optional string request_path = 1;
}

// Extension registry
// --------------------------------
// Project:  NanoRPC
// Contact:  protomcp.org
// Extensions: 5020 (method options) - NOT YET REGISTERED
// --------------------------------

extend google.protobuf.MethodOptions {
  NanoRPCMethodOptions nanorpc = 5020;
}
